--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,7 @@ body {
     cursor: url('support/hcursor.png'), auto;
 }
 a{
-        cursor: url('support/hcursor.png'), auto;
+        cursor: url('support/cursor.png'), auto;
 
 }
 .center {
