--- a/docs/style.css
+++ b/docs/style.css
@@ -1,22 +1,77 @@
 body {
-    cursor: url('support/hcursor.png'), auto;
+	cursor: url('support/hcursor.png'), auto;
 }
-a{
-        cursor: url('support/cursor.png'), auto;
+
+a {
+	cursor: url('support/cursor.png'), auto;
 
 }
-.center {
+
+.navi ul {
+  list-style-type: none;
+  margin-bottom: 30px;
+  padding: 0;
+  overflow: hidden;
+  background-color: #dcdcdc;
+}
+
+.navi li {
+  float: left;
+}
+
+.navi li a {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-.mainP{
-    height: 300px;
+
+.navi li a:hover {
+  background-color: #717171;
 }
-.subP{
-    height: 150px;
+
+.navi p {
+	font-size: 40px;
+	text-decoration: none;
 }
+
+.navi img {
+	display: flex;
+	float: left;
+	width: 100px;
+}
+
+p {
+	color: black;
+	font-family: verdana;
+	font-size: 15px;
+}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%
+}
+
+.mainI {
+	width: 30%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.mainP {
+	height: 300px;
+}
+
+.subP {
+	height: 150px;
+}
+
 .textR {
 	border: 1px solid #ccc;
 	padding: 5px 10px;
@@ -26,12 +81,13 @@ a{
 	font-size: 15px;
 	border-radius: 3px;
 	-webkit-border-radius: 5px;
-	
+
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 }
-.tree li a{
+
+.tree li a {
 	border: 3px solid black;
 	background-color: black;
 	padding: 5px 10px;
@@ -40,37 +96,43 @@ a{
 	font-family: bookman;
 	font-size: 25px;
 	display: grid;
-	
+
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 }
-.RC{
-    width:175px;
+
+.RC {
+	width: 175px;
 }
 
-.RCM{
-    width:1300px;
+.RCM {
+	width: 1300px;
 }
 
 
 /*Now the CSS*/
-* {margin: 0; padding: 0;}
+* {
+	margin: 0;
+	padding: 0;
+}
 
 .tree ul {
-	padding-top: 20px; position: relative;
-	
+	padding-top: 20px;
+	position: relative;
+
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 }
 
 .tree li {
-	float: left; text-align: center;
+	float: left;
+	text-align: center;
 	list-style-type: none;
 	position: relative;
 	padding: 20px 5px 0 5px;
-	
+
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
@@ -78,59 +140,79 @@ a{
 
 /*We will use ::before and ::after to draw the connectors*/
 
-.tree li::before, .tree li::after{
+.tree li::before,
+.tree li::after {
 	content: '';
-	position: absolute; top: 0; right: 50%;
+	position: absolute;
+	top: 0;
+	right: 50%;
 	border-top: 1px solid #ccc;
-	width: 50%; height: 20px;
+	width: 50%;
+	height: 20px;
 }
-.tree li::after{
-	right: auto; left: 50%;
+
+.tree li::after {
+	right: auto;
+	left: 50%;
 	border-left: 1px solid #ccc;
 }
 
 /*We need to remove left-right connectors from elements without 
 any siblings*/
-.tree li:only-child::after, .tree li:only-child::before {
+.tree li:only-child::after,
+.tree li:only-child::before {
 	display: none;
 }
 
 /*Remove space from the top of single children*/
-.tree li:only-child{ padding-top: 0;}
+.tree li:only-child {
+	padding-top: 0;
+}
 
 /*Remove left connector from first child and 
 right connector from last child*/
-.tree li:first-child::before, .tree li:last-child::after{
+.tree li:first-child::before,
+.tree li:last-child::after {
 	border: 0 none;
 }
+
 /*Adding back the vertical connector to the last nodes*/
-.tree li:last-child::before{
+.tree li:last-child::before {
 	border-right: 1px solid #ccc;
 	border-radius: 0 5px 0 0;
-	-webkit-border-radius: 0 5px 0 0;}
-.tree li:first-child::after{
+	-webkit-border-radius: 0 5px 0 0;
+}
+
+.tree li:first-child::after {
 	border-radius: 5px 0 0 0;
 	-webkit-border-radius: 5px 0 0 0;
 }
 
 /*Time to add downward connectors from parents*/
-.tree ul ul::before{
+.tree ul ul::before {
 	content: '';
-	position: absolute; top: 0; left: 50%;
+	position: absolute;
+	top: 0;
+	left: 50%;
 	border-left: 1px solid #ccc;
-	width: 0; height: 20px;
+	width: 0;
+	height: 20px;
 }
 
 
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
-.tree li a:hover, .tree li a:hover+ul li a {
-	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+.tree li a:hover,
+.tree li a:hover+ul li a {
+	background: #c8e4f8;
+	color: #000;
+	border: 1px solid #94a0b4;
 }
+
 /*Connector styles on hover*/
-.tree li a:hover+ul li::after, 
-.tree li a:hover+ul li::before, 
-.tree li a:hover+ul::before, 
-.tree li a:hover+ul ul::before{
-	border-color:  #94a0b4;
+.tree li a:hover+ul li::after,
+.tree li a:hover+ul li::before,
+.tree li a:hover+ul::before,
+.tree li a:hover+ul ul::before {
+	border-color: #94a0b4;
 }
