live onscreen mii birth

--- a/docs/style.css
+++ b/docs/style.css
@@ -42,6 +42,11 @@ a {
 	width: 100px;
 }
 
+.mii {
+	width:125px;
+	text-decoration: none;
+	display: inline;
+}
 p {
 	color: black;
 	font-family: verdana;
