--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,5 @@
 body {
+	background-color: #cacaca;
 	cursor: url('support/hcursor.png'), auto;
 }
 
@@ -6,7 +7,50 @@ a {
 	cursor: url('support/cursor.png'), auto;
 
 }
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width:85%
+}
+.textBlock {
+	background-color: white;
+	padding: 5%;
+	padding-top: 3%;
+	color: black;
+	font-family: verdana;
+	font-size: 12pt;
+}
+.textBlock h2 {
 
+	color: black;
+	padding-top:0.5em;
+	padding-bottom: 0.4em;
+	font-size: 25pt;
+	font-weight:600;	
+	text-align: left;
+}
+.textBlock a {
+	font-weight:600;
+	text-decoration: underline;
+color: black;
+}
+.textBlock a:hover {
+	font-weight:900;
+color: lightseagreen;
+}
+.textBlock section
+{
+	padding-bottom:3%;
+}
+
+.right {
+float: right;
+}
+
+.note {
+	background-color: yellow;
+}
 .navi ul {
 	list-style-type: none;
 	margin-bottom: 30px;
@@ -42,31 +86,8 @@ a {
 	width: 100px;
 }
 
-h1 {
-
-	color: black;
-	font-family: verdana;
-	font-size: 30px;
-	font-weight: 100;
-	text-align: center;
-}
-
-p {
-	color: black;
-	font-family: verdana;
-	font-size: 15px;
-}
-
-
-.center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 75%
-}
 
 .mainI {
-	width: 30%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
