--- a/docs/style.css
+++ b/docs/style.css
@@ -5,7 +5,18 @@ body {
 
 a {
 	cursor: url('support/cursor.png'), auto;
+}
 
+.hunter ::selection {
+    background: #3effff;
+    color: rgb(49, 23, 142);
+    text-shadow: none;
+}
+
+.vampire ::selection {
+    background: #ffd83e;
+    color: rgb(172, 28, 28);
+    text-shadow: none;
 }
 
 .center {
@@ -118,8 +129,8 @@ a {
 
 .ticon {
 	float: left;
-	width: 4em;
-	height: 5em;
+	width: 6em;
+	height: 6em;
 	padding-right: 1em;
 	padding-left: 1em;
 }
@@ -180,10 +191,9 @@ a {
 	padding-right: 0.5em;
 }
 
-.noBullets {
-	list-style: none;
+.ph {
+	height:15em;
 }
-
 /*Wikis*/
 .wiki {
 	color: black;
@@ -231,155 +241,60 @@ a {
 }
 
 
-/*Tree Stuff*/
-.mainP {
-	height: 300px;
+/*responsive gallery from w3schools*/
+div.gallery {
+  border: 0.5em solid #ccc;
 }
 
-.subP {
-	height: 150px;
+div.gallery:hover {
+  border: 0.5em solid #777;
 }
 
-.textR {
-	border: 1px solid #ccc;
-	padding: 5px 10px;
-	text-decoration: none;
-	color: black;
-	font-family: verdana;
-	font-size: 15px;
-	border-radius: 3px;
-	-webkit-border-radius: 5px;
-
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+div.gallery img {
+  width: 100%;
+  height: auto;
+  
 }
 
-.tree li a {
-	border: 3px solid black;
-	background-color: black;
-	padding: 5px 10px;
-	text-decoration: none;
-	color: #69cdee;
-	font-family: bookman;
-	font-size: 25px;
-	display: grid;
-
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+div.desc {
+  padding: 15px;
+  text-align: center;
 }
 
-.RC {
-	width: 175px;
+* {
+  box-sizing: border-box;
 }
 
-.RCM {
-	width: 1300px;
+.responsive {
+  padding: 0 6px;
+  float: left;
+  vertical-align: center;
+  width: 24.99999%;
 }
 
-/*Now the CSS*/
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 }
 
-.tree ul {
-	padding-top: 20px;
-	position: relative;
-
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-}
-
-.tree li {
-	float: left;
-	text-align: center;
-	list-style-type: none;
-	position: relative;
-	padding: 20px 5px 0 5px;
-
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
-}
-
-/*We will use ::before and ::after to draw the connectors*/
-
-.tree li::before,
-.tree li::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 50%;
-	border-top: 1px solid #ccc;
-	width: 50%;
-	height: 20px;
-}
-
-.tree li::after {
-	right: auto;
-	left: 50%;
-	border-left: 1px solid #ccc;
-}
-
-/*We need to remove left-right connectors from elements without 
-any siblings*/
-.tree li:only-child::after,
-.tree li:only-child::before {
-	display: none;
-}
-
-/*Remove space from the top of single children*/
-.tree li:only-child {
-	padding-top: 0;
-}
-
-/*Remove left connector from first child and 
-right connector from last child*/
-.tree li:first-child::before,
-.tree li:last-child::after {
-	border: 0 none;
-}
-
-/*Adding back the vertical connector to the last nodes*/
-.tree li:last-child::before {
-	border-right: 1px solid #ccc;
-	border-radius: 0 5px 0 0;
-	-webkit-border-radius: 0 5px 0 0;
-}
-
-.tree li:first-child::after {
-	border-radius: 5px 0 0 0;
-	-webkit-border-radius: 5px 0 0 0;
-}
-
-/*Time to add downward connectors from parents*/
-.tree ul ul::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 50%;
-	border-left: 1px solid #ccc;
-	width: 0;
-	height: 20px;
-}
 
 
-/*Time for some hover effects*/
-/*We will apply the hover effect the the lineage of the element also*/
-.tree li a:hover,
-.tree li a:hover+ul li a {
-	background: #c8e4f8;
-	color: #000;
-	border: 1px solid #94a0b4;
-}
-
-/*Connector styles on hover*/
-.tree li a:hover+ul li::after,
-.tree li a:hover+ul li::before,
-.tree li a:hover+ul::before,
-.tree li a:hover+ul ul::before {
-	border-color: #94a0b4;
-}
