--- a/docs/style.css
+++ b/docs/style.css
@@ -23,8 +23,10 @@ a {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 85%
+	width: 85%;
+	text-align: center;
 }
+
 
 .textBlock {
 	background-color: white;
