--- a/docs/style.css
+++ b/docs/style.css
@@ -257,7 +257,15 @@ a {
 	font-weight: 600;
 	text-align: left;
 }
-
+ .showcase {
+	width: 45%;
+display: inline;
+padding-left:2%;
+padding-right:2%;
+	margin-left: auto;
+	margin-right: auto;
+	
+ }
 
 /*responsive gallery from w3schools*/
 div.gallery {
@@ -271,6 +279,7 @@ div.gallery:hover {
 div.gallery img {
 	width: 100%;
 	height: auto;
+
 
 }
 
